--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <testcontainers.version>1.0.4</testcontainers.version>
    </properties>
 
    <modules>
