--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -11,13 +11,6 @@
       <version>1.0.0-SNAPSHOT</version>
    </parent>
 
-   <repositories>
-      <repository>
-         <id>jitpack.io</id>
-         <url>https://jitpack.io</url>
-      </repository>
-   </repositories>
-
    <dependencies>
 
       <!-- Project dependencies -->
@@ -51,7 +44,7 @@
       <dependency>
          <groupId>com.github.kaiwinter</groupId>
          <artifactId>di-instantiator</artifactId>
-         <version>v1.1.0</version>
+         <version>1.1.1</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
