Added missing depencency

--- a/wildfly-mariadb/pom.xml
+++ b/wildfly-mariadb/pom.xml
@@ -93,6 +93,12 @@
          <version>${testcontainers.version}</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>javax</groupId>
+         <artifactId>javaee-api</artifactId>
+         <version>7.0</version>
+         <scope>test</scope>
+      </dependency>
 
    </dependencies>
 
