--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -29,7 +29,7 @@
       <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
-         <version>5.1.38</version>
+         <version>5.1.39</version>
       </dependency>
 
 
@@ -46,6 +46,23 @@
          <artifactId>di-instantiator</artifactId>
          <version>1.1.1</version>
          <scope>test</scope>
+      </dependency>
+      
+      <dependency>
+         <groupId>org.dbunit</groupId>
+         <artifactId>dbunit</artifactId>
+         <version>2.5.2</version>
+         <scope>test</scope>
+         <exclusions>
+            <exclusion>
+                 <artifactId>stax-api</artifactId>
+                 <groupId>stax</groupId>
+            </exclusion>
+            <exclusion>
+                 <artifactId>poi-ooxml</artifactId>
+                 <groupId>org.apache.poi</groupId>
+            </exclusion>
+         </exclusions>
       </dependency>
    </dependencies>
 
