--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,13 @@
       <maven.compiler.target>1.8</maven.compiler.target>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-      <testcontainers.version>1.1.2</testcontainers.version>
+      <testcontainers.version>1.11.2</testcontainers.version>
    </properties>
 
    <modules>
       <module>hibernate</module>
       <module>wildfly-mariadb</module>
+	  <module>jsf</module>
    </modules>
 
    <!-- Logging -->
