--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -15,15 +15,15 @@
 
       <!-- Project dependencies -->
       <dependency>
-         <groupId>org.hibernate</groupId>
+         <groupId>org.hibernate.orm</groupId>
          <artifactId>hibernate-core</artifactId>
-         <version>5.4.2.Final</version>
+         <version>6.1.7.Final</version>
       </dependency>
 
       <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-         <version>5.1.47</version>
+         <groupId>com.mysql</groupId>
+         <artifactId>mysql-connector-j</artifactId>
+         <version>8.0.32</version>
       </dependency>
 
 
@@ -45,7 +45,7 @@
       <dependency>
          <groupId>org.dbunit</groupId>
          <artifactId>dbunit</artifactId>
-         <version>2.6.0</version>
+         <version>2.7.3</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
