--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,10 @@
    </licenses>
 
    <properties>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
+      <java.version>17</java.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-      <testcontainers.version>1.11.2</testcontainers.version>
+      <testcontainers.version>1.17.6</testcontainers.version>
    </properties>
 
    <modules>
@@ -47,17 +46,17 @@
       <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
-         <version>1.7.7</version>
+         <version>2.0.6</version>
       </dependency>
       <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
-         <version>1.1.2</version>
+         <version>1.4.5</version>
       </dependency>
       <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-core</artifactId>
-         <version>1.1.2</version>
+         <version>1.4.5</version>
       </dependency>
    </dependencies>
 
