--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -17,17 +17,23 @@
       <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-core</artifactId>
-         <version>5.4.2.Final</version>
+         <version>6.1.7.Final</version>
       </dependency>
 
       <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-         <version>5.1.47</version>
+         <groupId>com.mysql</groupId>
+         <artifactId>mysql-connector-j</artifactId>
+         <version>8.0.32</version>
       </dependency>
 
 
       <!-- Test dependencies -->
+      <dependency>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter</artifactId>
+         <version>5.9.2</version>
+         <scope>test</scope>
+      </dependency>
       <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>mysql</artifactId>
@@ -45,7 +51,7 @@
       <dependency>
          <groupId>org.dbunit</groupId>
          <artifactId>dbunit</artifactId>
-         <version>2.6.0</version>
+         <version>2.7.3</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
