--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -15,7 +15,7 @@
 
       <!-- Project dependencies -->
       <dependency>
-         <groupId>org.hibernate</groupId>
+         <groupId>org.hibernate.orm</groupId>
          <artifactId>hibernate-core</artifactId>
          <version>6.1.7.Final</version>
       </dependency>
