--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,14 @@
       <maven.compiler.target>17</maven.compiler.target>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-      <testcontainers.version>1.17.6</testcontainers.version>
+      <testcontainers.version>1.18.0</testcontainers.version>
    </properties>
 
    <modules>
       <module>hibernate</module>
       <module>wildfly-mariadb</module>
-	  <module>jsf</module>
+      <module>wildfly-mariadb-plain-containers</module>
+      <module>jsf</module>
    </modules>
 
    <!-- Logging -->
