--- a/wildfly-mariadb-plain-containers/pom.xml
+++ b/wildfly-mariadb-plain-containers/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
-   <artifactId>wildfly-mariadb</artifactId>
-   <name>testcontainers-wildfly-mariadb</name>
-   <description>Example for testing a hibernate persistence layer</description>
+   <artifactId>wildfly-mariadb-plain-containers</artifactId>
+   <name>testcontainers-wildfly-mariadb-plain-containers</name>
+   <description>Example for testing a hibernate persistence layer - the other way</description>
 
    <parent>
       <groupId>com.github.kaiwinter</groupId>
@@ -41,14 +41,14 @@
       <dependency>
          <groupId>org.hibernate.orm</groupId>
          <artifactId>hibernate-core</artifactId>
-         <version>6.2.0.Final</version>
+         <version>6.2.1.Final</version>
          <scope>provided</scope>
       </dependency>
 
       <dependency>
          <groupId>org.mariadb.jdbc</groupId>
          <artifactId>mariadb-java-client</artifactId>
-         <version>2.7.4</version> <!-- as contained in the docker image -->
+         <version>3.1.3</version>
          <scope>provided</scope>
       </dependency>
 
@@ -74,7 +74,7 @@
 
       <dependency>
          <groupId>org.testcontainers</groupId>
-         <artifactId>mysql</artifactId>
+         <artifactId>mariadb</artifactId>
          <version>${testcontainers.version}</version>
          <scope>test</scope>
       </dependency>
@@ -89,6 +89,12 @@
       <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-model</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
